--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,9 @@
 #Thu Dec 12 20:55:58 CST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+#----------- Gradle 8.x - Java 17 -----------
+#distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+#----------- Gradle 7.x - Java 11 -----------
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
