--- a/dynamic-watermark/build.gradle
+++ b/dynamic-watermark/build.gradle
@@ -37,7 +37,7 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-//                from components.release
+                from components.release
             }
         }
     }
